...
    <EditText
        android:id="@+id/sessionNameMainEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="22dp"
        app:layout_constraintLeft_toRightOf="@id/startStopSessionMainButton"
        app:layout_constraintRight_toLeftOf="@id/editSaveSessionNameMainButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sessionUsersMainRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortFilterMainButton" />

    <Button
        android:id="@+id/startStopSessionMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onStartStopSessionMainButtonClicked"
        android:text="Start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editSaveSessionNameMainButton"
        android:layout_width="wrap_content"
...
        android:scaleType="centerInside"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSaveSessionNameMainButton"
        app:srcCompat="@drawable/sort_filter" />

    <LinearLayout
        android:id="@+id/sortFilterMainLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/sort_by" />

        <Spinner
            android:id="@+id/sortMainSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:prompt="@string/sort_by" />

        <EditText
...
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:prompt="@string/filter_by" />
    </LinearLayout>

    <Button
        android:id="@+id/mockMessageMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onMockMessageMainButtonClicked"
        android:text="Mock"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startStopSessionMainButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
